--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/passport": "^7.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "cookie-parser": "^1.4.5",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.17",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
